# SturdyEngine4

./: .gitignore  CLA.md  CMakeLists.txt  MakingTheEngineCompile.md  UPDATES_LICENSE_POLICY.md
.zed/: debug.json  settings.json  tasks.json
scripts/unix/: build.sh  clean.sh  configure.sh  run-runtime.sh
scripts/win/: build.bat  clean.bat  configure.bat  run-runtime.bat
